# websocket

./: .gitignore  main.cpp
ChatServer/: AsioIOServicePool.h  CMakeLists.txt  CServer.cpp  CServer.h  CSession.cpp  CSession.h  ChatConPool.h  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServiceImpl.cpp  ChatServiceImpl.h  ConfigMgr.cpp  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  MysqlPool.h  RedisConPool.h  RedisMgr.cpp  RedisMgr.h  Session.h  Singleton.h  StatusGrpcClient.cpp  StatusGrpcClient.h  UserMgr.cpp  UserMgr.h  config.ini  const.h  main.cpp  message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
ChatServer copy/: AsioIOServicePool.cpp  AsioIOServicePool.h  CMakeLists.txt  CServer.h  CSession.cpp  CSession.h  LogicSystem.cpp  LogicSystem.h  Session.cpp  StatusGrpcClient.cpp  config.example.ini  const.h  main.cpp
GateServer/: CMakeLists.txt  CServer.cpp  CServer.h  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  MysqlPool.h  RedisMgr.cpp  RedisMgr.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VarifyGrpcClient.cpp  VarifyGrpcClient.h  config.ini  const.h  main.cpp
QT front/client_front/: chatdialog.cpp  chatdialog.h  chatdialog.ui  client_front.pro  friendapplypage.cpp  friendapplypage.h  friendapplypage.ui  global.cpp  global.h  httpmgr.cpp  httpmgr.h  loginlog.cpp  loginlog.h  loginlog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerlog.cpp  registerlog.h  registerlog.ui  singleton.h  tcpmgr.cpp  tcpmgr.h  timerbtn.cpp  timerbtn.h  usermgr.cpp  usermgr.h
StatusServer/: CMakeLists.txt  ConfigMgr.h  RedisConPool.h  RedisMgr.cpp  SectionInfo.h  StatusServer.cpp  StatusServiceImpl.cpp  StatusServiceImpl.h  config.example.ini  config.ini  const.h  message copy.proto  message.pb.cc  message.pb.h  message.proto
VarifyServer/: config.example.json  config.js  const.js  email.js  package-lock.json  package.json  redis.js  server.js
